kubernetes/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "9000"
        traffic.sidecar.istio.io/excludeOutboundPorts: "2552,8558"
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: hello-impl:1.0-SNAPSHOT
          # Remove for a real project, the image is picked up locally for the integration test
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /alive
              port: 8558
          readinessProbe:
            httpGet:
              path: /ready
              port: 8558
          ports:
            - containerPort: 9000
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: "hello"
  labels:
    app: "hello"
  namespace: "default"
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: "hello"
