kubernetes/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: "hello-external-ingress"
spec:
  rules:
    - http:
        paths:
          - path: "/api/external/hello"
            backend:
              serviceName: "hello"
              servicePort: 9000
